WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130930
Fix scrolling on OS X with UI-side compositing
https://bugs.webkit.org/show_bug.cgi?id=130930
Summary
Fix scrolling on OS X with UI-side compositing
Simon Fraser (smfr)
Reported
2014-03-29 11:33:35 PDT
Fix scrolling on OS X with UI-side compositing
Attachments
Patch
(4.53 KB, patch)
2014-03-29 11:34 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-29 11:34:59 PDT
Created
attachment 228113
[details]
Patch
Tim Horton
Comment 2
2014-03-29 15:17:09 PDT
Comment on
attachment 228113
[details]
Patch 10000x thank you
Simon Fraser (smfr)
Comment 3
2014-03-31 12:42:57 PDT
https://trac.webkit.org/r166518
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug